--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,7 +49,98 @@
 </div>
  -->
 
-<div class="card clearfix" data-score="30" data-price="59.70">
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/34vRL5p"><img src="https://m.media-amazon.com/images/I/51nqEpr4csL._SR400,400_.jpg" alt="Smart Plug" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/34vRL5p">[New Version] Smart Plug, LeFun WiFi Outlet Grouping Control (4-Pack) Compatible with Alexa Google Assistant...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">50IZKKJF</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.99</strong> with promo code: <strong class="m_codes">50IZKKJF</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 11, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/34vRL5p">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="7.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PUdGQj"><img src="https://m.media-amazon.com/images/I/81vNYy6ZqCL._SR400,400_.jpg" alt="CYZ Men's V-Neck T-Shirt Undershirt Pack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2PUdGQj">CYZ Men's V-Neck T-Shirt Undershirt Pack of 3 100% Cotton</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.50</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">50COTTONSHRT</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $14.99</strong> with promo code: <strong class="m_codes">50COTTONSHRT</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 09, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2PUdGQj">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="12.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZGcaWG"><img src="https://m.media-amazon.com/images/I/61YUmm1XyGL._SR400,400_.jpg" alt="Aeifond Smart Watch Bluetooth Smartwatch" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZGcaWG">Aeifond Smart Watch Bluetooth Smartwatch Touch Screen Wrist Watch Sports Fitness Tracker with Camera SIM SD Card Slot Pedometer Compatible...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.59</span><span class="ori_price">$27.98</span></address>
+      <textarea readonly="readonly" class="code_area">55TCOL3Y</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $27.98</strong> with promo code: <strong class="m_codes">55TCOL3Y</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZGcaWG">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="18.34">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZIFP1p"><img src="https://m.media-amazon.com/images/I/61lg22xZbLL._SR400,400_.jpg" alt="Veru ETERNITY Hair Straightening Brush" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZIFP1p">Veru ETERNITY Hair Straightening Brush, Ionic Hot Heat Brush with 5 Adjustable Temperatures, LED Display, Anti Static,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.34</span><span class="ori_price">$36.69</span></address>
+      <textarea readonly="readonly" class="code_area">501TJMEM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $36.69</strong> with promo code: <strong class="m_codes">501TJMEM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 13, 2019 at 03:00 AM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZIFP1p">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="21.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PMSY4H"><img src="https://m.media-amazon.com/images/I/51YAxBxe1-L._SR400,400_.jpg" alt="Yootech Dual Fast Wireless Charger with Cooling Fan" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2PMSY4H">Yootech Dual Fast Wireless Charger with Cooling Fan, 4 Coils 10W Wireless Charging Stand and Pad with Quick Adapter,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.50</span><span class="ori_price">$42.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50B3TCBH</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $42.99</strong> with promo code: <strong class="m_codes">50B3TCBH</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 14, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2PMSY4H">Use Code at Amazon</a></div>
+</div>
+ 
+ <div class="card clearfix" data-score="30" data-price="59.70">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/31c61yd"><img src="https://m.media-amazon.com/images/I/61dpIp+yeML._SR400,400_.jpg" alt="Eureka Instant Clear 26' NEA120 Purifier" /></a>
   </div>
