--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,63 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="38" data-price="19.83">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/315CdTv"><img src="https://m.media-amazon.com/images/I/71zpompMp+L._SR400,400_.jpg" alt="LED Selfie Ring Light" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>38% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/315CdTv">8" LED Selfie Ring Light for Live Stream/Makeup/YouTube Video, Dimmable Beauty Ringlight with Tripod Stand & Cell Phone...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.83</span><span class="ori_price">$31.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">387CMENYB</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>38% off at $31.99</strong> with promo code: <strong class="m_codes">387CMENYB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 13, 2019 at 09:00 AM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/315CdTv">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="7.56">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZZYXmP"><img src="https://images-na.ssl-images-amazon.com/images/I/6162ZcYPXOL._SX522_.jpg" alt="LED Bike Wheel Light" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZZYXmP">LED Bike Wheel Light, QANGEL Bicycle Spoke Light IPX5 Waterproof 64PCS LED Lights Display Bright 30 Patterns Safety Cycling....</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.56</span><span class="ori_price">$18.89</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">6084IDFU</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $18.89</strong> with promo code: <strong class="m_codes">6084IDFU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 13, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZZYXmP">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="14.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/317h2k5"><img src="https://m.media-amazon.com/images/I/91VIj+fJj4L._SR400,400_.jpg" alt="Travel Hiking Backpack Daypack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/317h2k5">Venture Pal Lightweight Packable Durable Travel Hiking Backpack Daypack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.69</span><span class="ori_price">$20.99</span></address>
+      <textarea readonly="readonly" class="code_area">30NVQVZD</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $20.99</strong> with promo code: <strong class="m_codes">30NVQVZD</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/317h2k5">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="60" data-price="13.60">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2ZYjdVU"><img src="https://m.media-amazon.com/images/I/71g4t3G1CVL._SR400,400_.jpg" alt="Personal Blender Glass Portable Blender" /></a>
