--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,60 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="50" data-price="22.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZZvUQd"><img src="https://m.media-amazon.com/images/I/51A-yf+oQpL._SR400,400_.jpg" alt="Adikoo Modern Digital Mechanical Retro Flip Dоwn Clock" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZZvUQd">Adikoo Modern Digital Mechanical Retro Flip Dоwn Clock</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.50</span><span class="ori_price">$44.99</span></address>
+      <textarea readonly="readonly" class="code_area">504K62LQ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $44.99</strong> with promo code: <strong class="m_codes">504K62LQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 12, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZZvUQd">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HPXb1l"><img src="https://m.media-amazon.com/images/I/51BFTFsjD2L._SR400,400_.jpg" alt="VISATOR 5 Gallon Water Bottle Dispenser" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HPXb1l">VISATOR 5 Gallon Water Bottle Dispenser - Portable Compact Intelligent wireless Electronic Drinking Water Pump...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">509LTFJF</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.99</strong> with promo code: <strong class="m_codes">509LTFJF</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 10, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HPXb1l">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="30" data-price="23.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/315xAsF"><img src="https://m.media-amazon.com/images/I/A1KJcAakjsL._SR400,400_.jpg" alt="Scarleton Travel Laptop Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/315xAsF">Scarleton Travel Laptop Backpack, Durable Laptops Backpack with USB Charging Port, College School Computer Bag...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.09</span><span class="ori_price">$32.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30SCARLETON</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $32.99</strong> with promo code: <strong class="m_codes">30SCARLETON</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 14, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/315xAsF">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="38" data-price="19.83">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/315CdTv"><img src="https://m.media-amazon.com/images/I/71zpompMp+L._SR400,400_.jpg" alt="LED Selfie Ring Light" /></a>
