--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -48,8 +48,91 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
+<div class="card clearfix" data-score="45" data-price="21.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NYJmBm"><img src="https://m.media-amazon.com/images/I/61EmZj+6wUL._SR400,400_.jpg" alt="BIGSUN Q953 10000mAh Rechargeable Spotlight" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NYJmBm">BIGSUN Q953 10000mAh Rechargeable Spotlight Flashlight with 6000 Lumen LED, Foldable Tripod and Strap,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.99</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">45MRLBSV</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $39.99</strong> with promo code: <strong class="m_codes">45MRLBSV</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 15, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2NYJmBm">Use Code at Amazon</a></div>
+</div>
 
+<div class="card clearfix" data-score="65" data-price="12.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/34Fx9HV"><img src="https://m.media-amazon.com/images/I/61MWmvbfOZL._SR400,400_.jpg" alt="AINOPE Car Vacuum Cleaner" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/34Fx9HV">AINOPE Car Vacuum Cleaner, 5000PA High Power Stronger Suction Car Vacuum DC 12V/ 90W Handheld Auto Car Cleaner with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.25</span><span class="ori_price">$34.99</span></address>
+      <textarea readonly="readonly" class="code_area">656GVKK2</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>65% off at $34.99</strong> with promo code: <strong class="m_codes">656GVKK2</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/34Fx9HV">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="45" data-price="12.64">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32FW6Bb"><img src="https://m.media-amazon.com/images/I/71CQBPJmkJL._SR400,400_.jpg" alt="sanipoe 360 Rotating Makeup Organizer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32FW6Bb">sanipoe 360 Rotating Makeup Organizer, DIY Adjustable Makeup Carousel Spinning Holder Storage Rack, Large Capacity Make up ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.64</span><span class="ori_price">$22.99</span></address>
+      <textarea readonly="readonly" class="code_area">45XW9TWB</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>percentage% off at $22.99</strong> with promo code: <strong class="m_codes">45XW9TWB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 15, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/32FW6Bb">Use Code at Amazon</a></div>
+</div>
 
+<div class="card clearfix" data-score="45" data-price="18.14">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/34EYdHb"><img src="https://m.media-amazon.com/images/I/41D4X-24I6L._SR400,400_.jpg" alt="USB C Charger for MacBook Pro 2018" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/34EYdHb">USB C Charger for MacBook Pro 2018, MacBook Air, iPad Pro 12.9, 11, 61W Thunderbolt 3 Port USB C Power Adapter for Lenovo,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.14</span><span class="ori_price">$32.99</span></address>
+      <textarea readonly="readonly" class="code_area">45TEWX29</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $32.99</strong> with promo code: <strong class="m_codes">45TEWX29</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/34EYdHb">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="19.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/34GiUCu"><img src="https://m.media-amazon.com/images/I/710CW94HIZL._SR400,400_.jpg" alt="JOSEKO Small Crossbody Purse for Women" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/34GiUCu">JOSEKO Small Crossbody Purse for Women, Solid PU leather Clutch Bag Card Bag Phone Bag Crossbody Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.59</span><span class="ori_price">$27.99</span></address>
+      <textarea readonly="readonly" class="code_area">30J4OLV1</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $27.99</strong> with promo code: <strong class="m_codes">30J4OLV1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 19, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/34GiUCu">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="80" data-price="5.20">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/34EtIBd"><img src="https://m.media-amazon.com/images/I/61XJtptTQ6L._SR400,400_.jpg" alt="USB-C to HDMI Adapter" /></a>
