--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,125 @@
 </div>
  -->
 
+ <div class="card clearfix" data-score="60" data-price="12.4">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O1w870"><img src="https://m.media-amazon.com/images/I/61wZlK52n2L._SR400,400_.jpg" alt="Bluetooth Smart Watch Fitness Tracker" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O1w870">Bluetooth Smart Watch Fitness Tracker, Activity Tracker Heart Rate Monitor Message Reminder Pedometer Track Sleep Watch...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.4</span><span class="ori_price">$30.99</span></address>
+      <textarea readonly="readonly" class="code_area">60RBPZIY</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $30.99</strong> with promo code: <strong class="m_codes">60RBPZIY</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O1w870">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32DJISb"><img src="https://m.media-amazon.com/images/I/51DvUw8OU3L._SR400,400_.jpg" alt="Qidoou Smart Watch Bluetooth Fitness Tracker" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32DJISb">Qidoou Smart Watch Bluetooth Fitness Tracker Android iOS Compatible Smartwatch of SIM SD Card Slot, Waterproof Pedometer Sleep...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.49</span><span class="ori_price">$26.99</span></address>
+      <textarea readonly="readonly" class="code_area">509V3XKB</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $26.99</strong> with promo code: <strong class="m_codes">509V3XKB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/32DJISb">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZY9iod"><img src="https://m.media-amazon.com/images/I/61u+-OVZa+L._SR400,400_.jpg" alt="SUNPOW 85L Travel Duffel Bag" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZY9iod">SUNPOW 85L Travel Duffel Bag, Large Weekender Bag With Shoes Compartment Tear Resistant Packable Duffle Bag...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">40R24GXO</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $29.99</strong> with promo code: <strong class="m_codes">40R24GXO</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZY9iod">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="55" data-price="11.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LPOUeV"><img src="https://m.media-amazon.com/images/I/51DlaJGsZbL._SR400,400_.jpg" alt="Poweriver 2 in 1 Charger Powerbank" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LPOUeV">Poweriver 2 in 1 Charger Powerbank, MetaPower with 2 Port, 5000mAh 2.1A 18W, Foldable Plug, Flashlight for Travel,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.25</span><span class="ori_price">$24.99</span></address>
+      <textarea readonly="readonly" class="code_area">55XTPA3P</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $24.99</strong> with promo code: <strong class="m_codes">55XTPA3P</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 27, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LPOUeV">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="20.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LNmJ08"><img src="https://m.media-amazon.com/images/I/61PJFHo7U0L._SR400,400_.jpg" alt="USB C Hub" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LNmJ08">USB C Hub, RCA USB C Adapter, 4K USB C to HDMI, 3 USB 3.0 Ports, SD/TF Card Readers, Compatible with MacBook Pro, Chromebook,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.29</span><span class="ori_price">$28.99</span></address>
+      <textarea readonly="readonly" class="code_area">30KB9UPI</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $28.99</strong> with promo code: <strong class="m_codes">30KB9UPI</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 03, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LNmJ08">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="16.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NX34O5"><img src="https://m.media-amazon.com/images/I/81ON8rTHJLL._SR400,400_.jpg" alt="BAG WIZARD Drawstring Backpack ..." /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>80% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NX34O5">BAG WIZARD Drawstring Backpack Lightweight Canvas Wet/Dry Sports Gym Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.00</span><span class="ori_price">$79.99</span></address>
+      <textarea readonly="readonly" class="code_area">80J29FZH</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>80% off at $79.99</strong> with promo code: <strong class="m_codes">80J29FZH</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2NX34O5">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="15.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O6J9Mu"><img src="https://m.media-amazon.com/images/I/913xxaw4htL._SR400,400_.jpg" alt="Off the Eaten Path Sampler Variety Pack, 16 Count" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O6J9Mu">Off the Eaten Path Sampler Variety Pack, 16 Count</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.98</span><span class="ori_price">$19.98</span></address>
+      <textarea readonly="readonly" class="code_area">20CURIOUS</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $19.98</strong> with promo code: <strong class="m_codes">20CURIOUS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 14, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O6J9Mu">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="40" data-price="20.40">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/30abu71"><img src="https://m.media-amazon.com/images/I/61Atwh-e79L._SR400,400_.jpg" alt="JAYJUN Pollution-Proof Mask" /></a>
@@ -278,123 +397,3 @@
   </div> 
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O0toH4">Use Code at Amazon</a></div>
 </div>
-
-<!-- <div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
-
-<div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
-
-<div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
- 
-<div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
-
-<div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
-
-<div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
-
-<div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
- -->
