--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -48,7 +48,94 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
-
+<div class="card clearfix" data-score="50" data-price="10.44">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/34L9yW2"><img src="https://m.media-amazon.com/images/I/71fJbszBNSL._SR400,400_.jpg" alt="CAMEL CROWN 35L Lightweight Packable Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/34L9yW2">CAMEL CROWN 35L Lightweight Packable Backpack Travel Hiking Daypack Ultralight Foldable Backpacks...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.44</span><span class="ori_price">$20.88</span></address>
+      <textarea readonly="readonly" class="code_area">50NNWMLY</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $20.88</strong> with promo code: <strong class="m_codes">50NNWMLY</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/34L9yW2">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="70" data-price="7.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31lNS0O"><img src="https://m.media-amazon.com/images/I/71MaqRL2e1L._SR400,400_.jpg" alt="Pedy Cat Water Fountain" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31lNS0O">Pedy Cat Water Fountain, Automatic Cat Flower Water Fountain, Pet Water Fountain for Cats and Dogs with Filter, Green</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.20</span><span class="ori_price">$23.99</span></address>
+      <textarea readonly="readonly" class="code_area">70G3H9Y5</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $23.99</strong> with promo code: <strong class="m_codes">70G3H9Y5</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 13, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31lNS0O">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="11.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZWRFoM"><img src="https://m.media-amazon.com/images/I/51mNm4bLnZL._SR400,400_.jpg" alt="MESOCO Waterproof Dry Bags" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZWRFoM">MESOCO Waterproof Dry Bags Set Floating Dry Backpack with Phone Case for Kayaking,Rafting,Boating,Camping,Hiking,Beach(Set of 2)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.20</span><span class="ori_price">$27.99</span></address>
+      <textarea readonly="readonly" class="code_area">60Z2O2TP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $27.99</strong> with promo code: <strong class="m_codes">60Z2O2TP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZWRFoM">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O6WNj3"><img src="https://m.media-amazon.com/images/I/71B-bVFSswL._SR400,400_.jpg" alt="Cordless Electric Kettle" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O6WNj3">Ovente 1.7 Liter BPA-Free Temperature Control Stainless Steel Cordless Electric Kettle with Keep Warm Function, ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">50QQQL1H</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $19.99</strong> with promo code: <strong class="m_codes">50QQQL1H</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 17, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O6WNj3">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="45" data-price="15.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NZH31a"><img src="https://m.media-amazon.com/images/I/51QxPXv+yuL._SR400,400_.jpg" alt="30W USB C Charger for MacBook 12 inch" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NZH31a">30W USB C Charger for MacBook 12 inch, MacBook Pro, MacBook Air, 2018 iPad Pro 12.9, 11, Samsung Galaxy S10, S9,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.39</span><span class="ori_price">$27.99</span>
+        <div class="tooltip_common tooltip_green"><span> + Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">45TEWX29</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $27.99</strong> with promo code: <strong class="m_codes">45TEWX29</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2NZH31a">Use Code at Amazon</a></div>
+</div>
+ 
  <div class="card clearfix" data-score="60" data-price="12.4">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2O1w870"><img src="https://m.media-amazon.com/images/I/61wZlK52n2L._SR400,400_.jpg" alt="Bluetooth Smart Watch Fitness Tracker" /></a>
