--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,152 @@
 </div>
  -->
 
+
+<div class="card clearfix" data-score="55" data-price="76.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZYX8vj"><img src="https://m.media-amazon.com/images/I/718iLXgqcfL._SR400,400_.jpg" alt="Sound Bars for TV" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZYX8vj">Sound Bars for TV, Vinoil Wired and Wireless 2.1 Channel Bluetooth Soundbar with Built-in Subwoofer and Optical AUX Connection Deep Bass Speaker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$76.50</span><span class="ori_price">$169.99</span>
+        <div class="tooltip_common tooltip_green"><span> + Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">55IS45SR</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $169.99</strong> with promo code: <strong class="m_codes">55IS45SR</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZYX8vj">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="30.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O2Hp78"><img src="https://m.media-amazon.com/images/I/61c6Zu-ds-L._SR400,400_.jpg" alt="Power Strip Tower Wireless Charger" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O2Hp78">Power Strip Tower Wireless Charger - GLCON Surge Protector Electric Charging Station 3000W 13A 6 Outlet Plugs 4 USB Ports...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$30.59</span><span class="ori_price">$35.99</span>
+        <div class="tooltip_common tooltip_green"><span> + Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">15L7NAQH</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>15% off at $35.99</strong> with promo code: <strong class="m_codes">15L7NAQH</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 17, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O2Hp78">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/300qU2s"><img src="https://m.media-amazon.com/images/I/51xaI5SwavL._SR400,400_.jpg" alt="Uciefy U8 Bluetooth Wireless Mouse" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/300qU2s">Uciefy U8 Bluetooth Wireless Mouse, Dual Mode Slim Rechargeable Wireless Mouse Silent Cordless Mice with Bluetooth 4.0 and 2.4G Wireless,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">50I5O44T</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $19.99</strong> with promo code: <strong class="m_codes">50I5O44T</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 14, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/300qU2s">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="25" data-price="74.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZVzXls"><img src="https://m.media-amazon.com/images/I/71jCkmQtVXL._SR400,400_.jpg" alt="HELM True Wireless Headphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZVzXls">HELM True Wireless Headphones, Earbuds/Earphones, Recharge up to 5X w/Charging Case, Unparalleled Audiophile Sound & Deep Bass,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$74.99</span><span class="ori_price">$99.99</span></address>
+      <textarea readonly="readonly" class="code_area">25OFFTW4</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $Original_price</strong> with promo code: <strong class="m_codes">25OFFTW4</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 21, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZVzXls">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O4EcE3"><img src="https://m.media-amazon.com/images/I/7115UhmCLgL._SR400,400_.jpg" alt="O'Bella Hair Straightener Brush" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O4EcE3">O'Bella Hair Straightener Brush Dual-Voltage 45 Second Fast Heat Up, 28mm Long&High Density Comb Teeth Anion Hair Straightener...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">508FOR6D</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.99</strong> with promo code: <strong class="m_codes">508FOR6D</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O4EcE3">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="6.65">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30iVQqe"><img src="https://m.media-amazon.com/images/I/718VhXgKqcL._SR400,400_.jpg" alt="FYHD Car Phone Mount with Extendable Telescopic Arm" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30iVQqe">FYHD Car Phone Mount with Extendable Telescopic Arm, Universal Smartphone Car Holder for Car Windshield/Dashboard Compatible with ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.65</span><span class="ori_price">$18.99</span></address>
+      <textarea readonly="readonly" class="code_area">659BOXF3</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>65% off at $18.99</strong> with promo code: <strong class="m_codes">659BOXF3</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30iVQqe">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="10.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/303uKHk"><img src="https://m.media-amazon.com/images/I/711FStirR5L._SR400,400_.jpg" alt="LXORY Qi Wireless Car Charger" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/303uKHk">LXORY Qi Wireless Car Charger - Air Vent Fan Blade Fast Charging Phone Mount - Auto Clamping Gravity Lock Holder for All Qi Ready Phones...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.95</span><span class="ori_price">$21.90</span>
+        <div class="tooltip_common tooltip_green"><span> + Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">508ZQUSF</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $21.90</strong> with promo code: <strong class="m_codes">508ZQUSF</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 21, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/303uKHk">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="7.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QkBbSG"><img src="https://m.media-amazon.com/images/I/61s6mDOu6vL._SR400,400_.jpg" alt="Aibrisk Magic Coffee Mug" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QkBbSG">Aibrisk Magic Coffee Mug I Love you Set - Heat Changing Mug Porcelain Tea Cup Drinking Cup Magic Gifts for Friends Anniversary...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.50</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">50P2PW8Q</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $14.99</strong> with promo code: <strong class="m_codes">50P2PW8Q</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2QkBbSG">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="50" data-price="6.50">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/300LCPZ"><img src="https://m.media-amazon.com/images/I/711pJPd7ZVL._SR400,400_.jpg" alt="Simple Drink Stainless Steel Insulated Water Bottle" /></a>
