--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -118,7 +118,7 @@
 .cu_wrap .pic{float:left;width:450px;height:300px;margin-right:40px;position:relative;}
 .cu_wrap .pic .start{position:absolute;top:10px;right:10px;}
 .cu_wrap .pic .start img{width:50px;}
-.cu_wrap .pic>a>img{width:100%;height:100%;object-fit:contain;}
+.cu_wrap .pic>a>img{width:100%;height:100%;object-fit:cover;}
 .cu_wrap .inner{float:left;width:500px;color:#616161;}
 .cu_wrap .inner>strong{font-size:26px;display:block;line-height:1.2;font-weight:100;}
 .cu_wrap .inner>strong>span{display:none;}
